test/sema/negative-uint64-literal.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

def main() {
    // CHECK: [[@LINE+1]]:21: error: -42 is out of range for type 'uint64'
    var a: uint64 = -42
}
